# qna-cli

./: README.md  pyproject.toml
qna/: main.py
qna_cli/: main.py
